<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="@mipmap/background">

    <TextView
        android:id="@+id/i2civil"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/i2civil"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/i2madame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i2mme"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/i2monsieur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i2mr"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>


    <EditText
        android:id="@+id/i2nom"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/i2nom" />

    <EditText
        android:id="@+id/i2prenom"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/i2prénom"/>

    <TextView
        android:id="@+id/i2dateN"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/i2naissance"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/i2jour"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/i2jour"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/i2mois"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/i2mois"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/i2an"
        android:layout_row="6"
        android:layout_column="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/i2an"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/i2mail"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/i2mail"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/i2adresse"
        android:layout_row="8"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/i2adresse"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/i2comment"
        android:layout_row="9"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/i2commentaire"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/i2valider"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_row="12"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_marginBottom="15dp"
        android:background="@color/colorButton"
        android:text="@string/i2valider"
        android:textSize="22sp"
        android:textAlignment="center"/>


</GridLayout>


